<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gameType"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical">

        <include layout="@layout/background_field" />

        <include layout="@layout/background_grass" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="60dp"
                app:srcCompat="@drawable/title2" />

            <TextView
                android:id="@+id/welcome_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="60dp"
                android:gravity="center"
                android:text="@string/select_game_type"
                android:textColor="@color/titleColor"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/inhibition"
                style="@style/ButtonText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_sign_long"
                android:onClick="inhibitionGame"
                android:text="@string/inhibition" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="60dp" />

            <Button
                android:id="@+id/updating"
                style="@style/ButtonText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_sign_long"
                android:onClick="updatingGame"
                android:text="@string/updating" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="60dp" />

            <Button
                android:id="@+id/shifting"
                style="@style/ButtonText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_sign_long"
                android:onClick="shiftingGame"
                android:text="@string/shifting" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="60dp" />

            <Button
                android:id="@+id/report"
                style="@style/ButtonText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_sign_long"
                android:onClick="report"
                android:text="@string/report" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="60dp" />

            <Button
                android:id="@+id/understandingDelirium"
                style="@style/ButtonText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_sign_long"
                android:onClick="understandingDelirium"
                android:text="@string/understanding_delirium" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="60dp" />

            <Button
                android:id="@+id/logOut"
                style="@style/ButtonText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_sign_long"
                android:onClick="logOut"
                android:text="Log Out" />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>