<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/game"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <include layout="@layout/background_field" />
    <include layout="@layout/background_clouds" />
    <include layout="@layout/background_grass" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/title" />

        <TextView
            android:id="@+id/welcome_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_in"
            android:textColor="@color/titleColor"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/PatientIDLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="106dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/PatientID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:gravity="fill_horizontal"
            android:hint="@string/register_patientid"
            android:inputType="text"
            android:lines="1"
            android:selectAllOnFocus="true"
            android:textColorHint="#333" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/PatientIDLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/Login"
            style="@style/ButtonText"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="267dp"
            android:layout_weight="0.5"
            android:background="@drawable/button_sign_long"
            android:onClick="Login"
            android:text="@string/Login"
            android:textStyle="bold" />

        <Button
            android:id="@+id/Register"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="267dp"
            android:layout_weight="0.5"
            android:background="@drawable/button_sign_long"
            android:onClick="Register"
            android:text="@string/Register"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>
