<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:scrollbars="none">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <include layout="@layout/background_field" />
    <include layout="@layout/background_grass" />
    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/backarrow"
        android:visibility="gone"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="26dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/title_menu" />

        <TextView
            android:id="@+id/instructions1"
            android:layout_width="331dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text=""
            android:textColor="@color/titleColor"
            android:textSize="25sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_marginBottom="50dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/button_sign_long2"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:id="@+id/Difficulty"
                style="@style/ButtonText"
                android:layout_width="125dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical|left"
                android:text="Difficulty" />
            <Button
                android:id="@+id/difficultyInstructions"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:background="@android:drawable/ic_dialog_info"
                android:gravity="center_vertical|left"
                />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.2" />
            <Spinner
                android:id="@+id/difficulty"
                style="@style/ButtonText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.50"
                android:prompt="@string/spinner_title" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/button_sign_long2"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">


            <CheckBox
                android:id="@+id/GiveFeedBack"
                style="@style/ButtonText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|left"
                android:layout_gravity="center_vertical|left"
                android:text="Give FeedBack" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:background="@drawable/button_sign_long"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:id="@+id/GameTimePicker"
                style="@style/ButtonText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical|left"
                android:text="Game Length" />


            <Spinner
                android:id="@+id/spinner"
                style="@style/ButtonText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:prompt="@string/spinner_title" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="50dp"
            android:layout_weight="1"
            android:background="@drawable/button_sign_long"
            android:orientation="horizontal"
            android:paddingLeft="16dp">

            <TextView
                android:id="@+id/PickMole"
                style="@style/ButtonText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:gravity="center_vertical|left"
                android:text="@string/pick" />

            <ImageView
                android:id="@+id/mole"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                app:srcCompat="@drawable/basicmole" />

            <CheckBox
                android:id="@+id/selectMole"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="50dp"
            android:layout_weight="1"
            android:background="@drawable/button_sign_long"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/PickButterFly"
                style="@style/ButtonText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:gravity="center_vertical|left"
                android:text="@string/pick" />

            <ImageView
                android:id="@+id/butterfly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                app:srcCompat="@drawable/butterfly" />

            <CheckBox
                android:id="@+id/selectButterfly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1" />


        </LinearLayout>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadeScrollbars="false">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/Start"
                    style="@style/ButtonText"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_sign2"
                    android:onClick="StartButton"
                    android:text="@string/Start"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/stats"
                    style="@style/ButtonText"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_sign2"
                    android:onClick="Instructions"
                    android:text="Instructions"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button3"
                    style="@style/ButtonText"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_sign2"
                    android:onClick="patientLog"
                    android:text="Participant Logs"
                    android:textStyle="bold" />


            </LinearLayout>
        </HorizontalScrollView>

    </LinearLayout>


</RelativeLayout>
</ScrollView>
